--- a/C#/Assignment1_MichaelPratt_ChatApplication/ChatLibrary/ChatLibrary.csproj
+++ b/C#/Assignment1_MichaelPratt_ChatApplication/ChatLibrary/ChatLibrary.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Client.cs" />
+    <Compile Include="Messenger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server.cs" />
   </ItemGroup>
